@@ -1,14 +1,14 @@
 package ssafy.age.backend.envInfo.service;
 
+import java.util.List;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import ssafy.age.backend.cam.exception.CamNotFoundException;
-import ssafy.age.backend.cam.persistence.Cam;
 import ssafy.age.backend.cam.persistence.CamRepository;
-import ssafy.age.backend.cam.service.CamService;
 import ssafy.age.backend.envInfo.persistence.EnvInfo;
-import ssafy.age.backend.envInfo.persistence.EnvInfoMapper;
 import ssafy.age.backend.envInfo.persistence.EnvInfoRepository;
+import ssafy.age.backend.envInfo.web.EnvInfoReceivedDto;
+import ssafy.age.backend.envInfo.web.EnvInfoResponseDto;
 
 @Service
 @RequiredArgsConstructor
@@ -18,16 +18,16 @@ public class EnvInfoService {
     private final EnvInfoRepository envInfoRepository;
     private final CamRepository camRepository;
 
-    public void save(EnvInfoDto envInfoDto) {
-        EnvInfo envInfo = envInfoMapper.toEnvInfo(envInfoDto);
-        envInfo.setCam(Cam.builder().id(envInfoDto.getCamId()).build());
+    public void save(EnvInfoReceivedDto envInfoReceivedDto) {
+        EnvInfo envInfo = envInfoMapper.toEnvInfo(envInfoReceivedDto);
         envInfoRepository.save(envInfo);
     }
-    //
-    //    public List<EnvInfoResponseDto> findAllByCamId(Long camId) {
-    //        List<EnvInfo> envInfos = envInfoRepository.findByCamId(camId);
-    //        return envInfos.stream()
-    //                .map(envInfoMapper::toEnvInfoResponseDto)
-    //                .collect(Collectors.toList());
-    //    }
+
+    public List<EnvInfoResponseDto> getEnvInfos(Long camId) {
+        if (!camRepository.existsById(camId)) {
+            throw new CamNotFoundException();
+        }
+        List<EnvInfo> envInfos = envInfoRepository.findAllByCamId(camId);
+        return envInfos.stream().map(envInfoMapper::toEnvInfoResponseDto).toList();
+    }
 }
